--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ bin
 .DS_Store
 
 
+.project
+.settings
+audit/test/testchain/geth
+audit/test/testchain/geth.ipc
+audit/test/testchain/history
+audit/test/contracts
+private
