gitignore update and other edits

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,13 @@ build
 dist
 bin
 
-
 # Mac's .DS folders
 .DS_Store
 
-
+.project
+.settings
+audit/test/testchain/geth
+audit/test/testchain/geth.ipc
+audit/test/testchain/history
+audit/test/contracts
+private
